# rag-patents-analyzer

./: .env.example  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-phase1.txt  test_phase1.py
.streamlit/: config.toml
data/processed/: .gitignore  bm25_index.pkl  chunk_ids.json  faiss.index  knowledge_graph.db  patents.json
docs/: 1. DATA_INGESTION_PIPELINE.md  2. RETRIEVAL_GENERATION.md  3. E2E_PIPELINE.md  4. EVALS.md  5. SCALING.md  AZURE_RAGAS_SETUP.md  DATA_INGESTION_PIPELINE.md  EVALS.md  PIPELINE_EXPLAINED.md  TEST_SET.md  UX_REQUIREMENTS.md  patent-demo-full-plan.md  solution.md
docs/phase_1/: PHASE1_README.md  QUICKSTART_PHASE1.md
evals/: README.md  eval.py  eval_vis.py  generate_dataset.py
evals/datasets/: generated_testset.csv  generated_testset.json  generated_testset_.json  generated_testset_large.csv  generated_testset_large.json  ragas_dataset_20.json  ragas_dataset_3.json  ragas_dataset_example.json
evals/experiments/: evaluation_report_20260213_222505.md  evaluation_report_20260214_234408.md  evaluation_report_20260215_001037.md  evaluation_report_20260215_084659.md  evaluation_report_20260215_085525.md  evaluation_report_20260215_094728.md  evaluation_report_20260215_114413.md  evaluation_report_20260215_115125.md  evaluation_report_20260215_121248.md  ragas_results.json  ragas_results_1.json  ragas_results_10.json  ragas_results_2.json  ragas_results_20260213_222505.json  ragas_results_20260214_234408.json  ragas_results_20260215_001037.json  ragas_results_20260215_084659.json  ragas_results_20260215_085525.json  ragas_results_20260215_094728.json  ragas_results_20260215_114413.json  ragas_results_20260215_115125.json  ragas_results_20260215_121248.json  ragas_results_3.json  ragas_results_4.json  ragas_results_5.json  ragas_results_6.json  ragas_results_7.json  ragas_results_8.json  ragas_results_9.json  ragas_results_DS20_RR_OFF.json  ragas_results_gpt4.json  ragas_results_gpt4_pr_opt.json  ragas_results_haiku.json
scripts/: build_indices.py  data_ingestion_pipeline.py  demo_retrieval.py  extract_patents.py  retrieval.py  retrieval_generation.py
src/: __init__.py  data_ingestion.py  logging_config.py  retrieval.py  retrieval_generation.py
src/app/: app.py
src/chunking/: __init__.py  chunker.py
src/extraction/: __init__.py  chunker.py  entity_extractor.py  pdf_parser.py
src/knowledge_graph/: __init__.py  builder.py  schema.py  store.py  traversal.py
src/llm/: __init__.py  answer_generator.py  llm_client.py
src/retrieval/: __init__.py  bm25_retriever.py  graph_retriever.py  hybrid_retriever.py  reranker.py  semantic_retriever.py
tests/: test_data_structure.py  test_graph_retriever.py  test_ingestion_pipeline.py  test_ollama_models.py  test_phase2_kg.py
