[project]
name = "patents-analyzer"
version = "0.1.0"
description = "Patents insights extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.0.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    "python-dotenv==1.0.0",
    "tqdm==4.66.1",
    "networkx>=3.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.3.1",
    "faiss-cpu>=1.7.4",
    "nltk>=3.8.1",
    "litellm>=1.0.0",
    "streamlit>=1.54.0",
    "pymupdf>=1.26.7",
]
