[project]
name = "patents-analyzer"
version = "0.1.0"
description = "Patents insights extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.0.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    "python-dotenv==1.0.0",
    "tqdm>=4.66.3", # Updated for datasets compatibility
    "networkx>=3.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.3.1",
    "faiss-cpu>=1.7.4",
    "nltk>=3.8.1",
    "litellm>=1.0.0",
    "streamlit>=1.54.0",
    "pymupdf>=1.26.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "deptry>=0.21.0",
    "pip-audit>=2.7.0",
]
evals = [
    # Core evaluation framework
    "ragas==0.4.3",
    "datasets==4.5.0",
    # LangChain integrations for RAGAS
    "langchain==1.2.10",
    "langchain-core==1.2.11",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.2.0",
    "langchain-litellm==0.5.1",
    "langchain-openai==1.1.9",
    "langchain-text-splitters==1.1.0",
    "llama-parse>=0.5.20",
    # LangGraph (used by RAGAS internally)
    "langgraph==1.0.8",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.7",
    "langgraph-sdk==0.3.5",
    "langsmith==0.7.1",
    # Data serialization and processing
    "dataclasses-json==0.6.7",
    "marshmallow==3.26.2",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    # Utilities
    "appdirs==1.4.4",
    "nest-asyncio==1.6.0",
    "requests-toolbelt==1.0.0",
    "sqlalchemy==2.0.46",
    "uuid-utils==0.14.0",
    # Performance and algorithms
    "scikit-network==0.33.5",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
    # JSON utilities
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    # Type checking utilities
    "typing-inspect==0.9.0",
    # HTTP/SSE support
    "httpx-sse==0.4.3",
    # Legacy LangChain (compatibility)
    "langchain-classic==1.0.1",
    "rapidfuzz>=3.14.3",
]

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches (acceptable in pipeline scripts)
    "PLR0915", # too many statements (acceptable in pipeline scripts)
    "PTH123",  # open() vs Path.open() - both are valid, allow open()
    "UP015",   # unnecessary mode argument - explicit "r" is clear
    "B905",    # zip without strict - explicit strict= not always needed
]

[tool.ruff.lint.per-file-ignores]
# Scripts need sys.path manipulation before imports
"scripts/*" = ["E402", "ARG001", "PLC0415"]
"evals/*" = ["E402", "PLC0415"]
# App has lazy imports for optional dependencies
"src/app/app.py" = ["PLC0415"]
# GraphRetriever has unused path args for interface compatibility with other retrievers
"src/retrieval/graph_retriever.py" = ["ARG002", "ARG003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
strict_optional = false
exclude = [
    "^\\.venv/",
    "^data/",
]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "rank_bm25.*",
    "faiss.*",
    "networkx.*",
    "sentence_transformers.*",
    "docling.*",
    "instructor.*",
    "nltk.*",
    "streamlit.*",
    "pymupdf.*",
    # Evaluation dependencies
    "ragas.*",
    "datasets.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_huggingface.*",
    "langchain_litellm.*",
    "langchain_openai.*",
    "langgraph.*",
    "langsmith.*",
]
ignore_missing_imports = true

# Bandit configuration
[tool.bandit]
exclude_dirs = [".venv", "data", "tests"]
skips = [
    "B101",  # assert_used - acceptable in non-production code
    "B110",  # try_except_pass - used intentionally in PDF parsing fallbacks
    "B301",  # pickle load - safe: only loads internally generated index files (see CLAUDE.md Security section)
    "B403",  # pickle import - safe: only used for internal BM25 index serialization (see CLAUDE.md Security section)
]

# Deptry configuration
[tool.deptry]
extend_exclude = [".venv", "data", "docs"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP001 = ["src"]   # Local package, not an external dependency
DEP002 = [
    "tqdm",  # tqdm may be used indirectly
    # Eval dependencies used indirectly by RAGAS
    "langchain_classic",
    "langsmith",
    "langgraph",
    "langgraph_checkpoint",
    "langgraph_prebuilt",
    "langgraph_sdk",
    "dataclasses_json",
    "marshmallow",
    "orjson",
    "ormsgpack",
    "appdirs",
    "nest_asyncio",
    "requests_toolbelt",
    "sqlalchemy",
    "uuid_utils",
    "scikit_network",
    "xxhash",
    "zstandard",
    "jsonpatch",
    "jsonpointer",
    "typing_inspect",
    "httpx_sse",
    "rapidfuzz",
]
DEP003 = ["numpy"] # numpy is a transitive dependency (via sentence-transformers, faiss)
